feat: remove an ingredient from a recipe
On the recipe details page I want to be able to remove an ingredient
